Opened 10 years ago

Closed 10 years ago

#5674 closed defect (fixed)

exr: fix decoding of 32-bit float rgb/rgba piz

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: exr
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

C:\>ffmpeg -i 2_rgb_32float_piz.exr c:\1\out.bmp
ffmpeg version N-80778-g729d82a Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-pthreads --enable-memalign-hack --enable-runtime-cpudetect --
enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -lw
inmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapsh
ots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/sna
pshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --
enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-li
bvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-li
bopencore-amrwb --enable-libmp3lame --enable-libfreetype --enable-libvpx --disab
le-decoder=libvpx
  libavutil      55. 27.100 / 55. 27.100
  libavcodec     57. 48.101 / 57. 48.101
  libavformat    57. 40.101 / 57. 40.101
  libavdevice    57.  0.102 / 57.  0.102
  libavfilter     6. 46.102 /  6. 46.102
  libswscale      4.  1.100 /  4.  1.100
  libswresample   2.  1.100 /  2.  1.100
  libpostproc    54.  0.100 / 54.  0.100
Input #0, exr_pipe, from '2_rgb_32float_piz.exr':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: exr, rgb48le, 1067x800 [SAR 1:1 DAR 1067:800], 25 tbr, 2
5 tbn, 25 tbc
[image2 @ 0x251c020] Using AVStream.codec to pass codec parameters to muxers is
deprecated, use AVStream.codecpar instead.
Output #0, image2, to 'c:\1\out.bmp':
  Metadata:
    encoder         : Lavf57.40.101
    Stream #0:0: Video: bmp, bgr24, 1067x800 [SAR 1:1 DAR 1067:800], q=2-31, 200
 kb/s, 25 fps, 25 tbn, 25 tbc
    Metadata:
      encoder         : Lavc57.48.101 bmp
Stream mapping:
  Stream #0:0 -> #0:0 (exr (native) -> bmp (native))
Press [q] to stop, [?] for help
frame=    1 fps=0.0 q=-0.0 Lsize=N/A time=00:00:00.04 bitrate=N/A speed=0.177x

video:2503kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing
overhead: unknown

Attachments (2)

2_rgb_32float_piz.exr (1.7 MB ) - added by ami_stuff 10 years ago.
2_rgba_32float_piz.exr (1.8 MB ) - added by ami_stuff 10 years ago.

Change History (4)

by ami_stuff, 10 years ago

Attachment: 2_rgb_32float_piz.exr added

by ami_stuff, 10 years ago

Attachment: 2_rgba_32float_piz.exr added

comment:1 by Carl Eugen Hoyos, 10 years ago

Component: undeterminedavcodec
Keywords: exr added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 10 years ago

Resolution: fixed
Status: openclosed

Fixed by Martin Vignali in d9e1e08133234dc4501413f0e3211f3a268049bc

Note: See TracTickets for help on using tickets.